<resources>
    <string name="app_name">LoginApp</string>
    <string name="login_activity_main">login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="more_location_string">more_location</string>
    <string name="personal_details_string">personal_details</string>
    <string name="notification_string">notification</string>
    <string name="job_post_string">job_post</string>
    <string name="pre_approve_string">pre_approve</string>
    <string name="setting_string">setting</string>
    <string name="sign_out_string">sign_out</string>
    <string name="Yes">yes</string>
    <string name="No">no</string>

</resources>
